; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-sh-sci.c_sh_sci_spi_txrx_mode3.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-sh-sci.c_sh_sci_spi_txrx_mode3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_device*, i32, i32, i32, i32)* @sh_sci_spi_txrx_mode3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sh_sci_spi_txrx_mode3(%struct.spi_device* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.spi_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.spi_device* %0, %struct.spi_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load %struct.spi_device*, %struct.spi_device** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %10, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @bitbang_txrx_be_cpha1(%struct.spi_device* %11, i32 %12, i32 1, i32 %13, i32 %14, i32 %15)
  ret i32 %16
}

declare dso_local i32 @bitbang_txrx_be_cpha1(%struct.spi_device*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
